[metadata]
name = engi-cli
version = 0.0.1
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Engi CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/cli
project_urls =
    Bug Tracker = https://github.com/engi-network/cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    naval_fate = engi_cli.naval_fate:main
    engi = engi_cli.cli:main

[options.packages.find]
where = src